--- a/css/styles.css
+++ b/css/styles.css
@@ -157,7 +157,7 @@ footer {
     flex-direction: column;
     height: fit-content;
     background-color: #42BFDD;
-    color: white;
+    color: black;
 }
 
 footer p {
